[package]
name = "hyper-demo"
version = "0.1.0"
authors = ["hongyuanyang"]
edition = "2018"


[[bin]]
name = "hyper_demo"
path = "src/main.rs"

[dependencies]
futures = "0.3"
async-std = '1'
hyper = "0.13.4"
futures-util = "*"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.4"
chrono = "0.4.6"
futures-timer = "3.0.2"